--- a/DesignTaburetka/Pages/ContractsForManagers.xaml
+++ b/DesignTaburetka/Pages/ContractsForManagers.xaml
@@ -3,7 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:DesignTaburetka.Pages" xmlns:f="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
+      xmlns:local="clr-namespace:DesignTaburetka.Pages" 
+      xmlns:f="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ContractsForManagers">
@@ -59,8 +60,8 @@
                                 <DataGridTemplateColumn Width="50" CanUserSort="False">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
-                                            <Button Name="BtnMoveToCompleted" Click="BtnMoveToCompleted1_Click" Style="{StaticResource IconButtonsStyle}" 
-                                        Tag="IsCloseButton" Cursor="Hand" Content="{f:Icon MinusCircle}">
+                                            <Button Name="BtnMoveToCompleted" Click="BtnMoveToCompleted1_Click" Style="{StaticResource IconButtonsStyleCompleted}" 
+                                        Tag="IsCloseButton" Cursor="Hand" Content="{f:Icon Check}">
                                             </Button>
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
