--- a/DesignTaburetka/App.xaml
+++ b/DesignTaburetka/App.xaml
@@ -215,6 +215,40 @@
             </Setter>
         </Style>
 
+        <Style x:Key="IconButtonsStyleStart" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Foreground" Value="#003b46"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="30"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Name="bd" CornerRadius="5" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter Name="ico" Content="{TemplateBinding Content}"  Height="25" Width="25" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="WhiteSmoke"/>
+                            </Trigger>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="IsMouseOver" Value="True"/>
+                                    <Condition Property="Tag" Value="IsCloseButton"/>
+                                </MultiTrigger.Conditions>
+                                <Setter Property="Background" Value="#FF7F50"/>
+                                <Setter Property="Foreground" Value="WhiteSmoke"/>
+                            </MultiTrigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Foreground" Value="#003b46"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <Style x:Key="AuthoTextBox" TargetType="Control">
             <Setter Property="Padding" Value="5"/>
             <Setter Property="Margin" Value="10"/>
