--- a/DesignTaburetka/Pages/WindowAddClient.xaml
+++ b/DesignTaburetka/Pages/WindowAddClient.xaml
@@ -5,9 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DesignTaburetka.Pages"
         mc:Ignorable="d"
-        Title="WindowAddClient" Height="450" Width="800"
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="None" AllowsTransparency="True" Background="Transparent">
+        Title="WindowAddClient" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
