--- a/DesignTaburetka/Pages/WindowAddWorker.xaml
+++ b/DesignTaburetka/Pages/WindowAddWorker.xaml
@@ -3,35 +3,32 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DesignTaburetka"
+        xmlns:local="clr-namespace:DesignTaburetka.Pages"
         mc:Ignorable="d"
-        Title="WindowAddWorker" Height="450" Width="800"
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="None" AllowsTransparency="True" Background="White">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+        Title="WindowAddWorker" Height="350" Width="450">
 
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
+    <Border>
 
-        <Label Grid.Row ="0" Grid.Column="0" Content="Имя клиента" Margin="5"/>
-        <Label Grid.Row ="1" Grid.Column="0" Content="Телефоны клиента" Margin="5"/>
-        <Label Grid.Row ="2" Grid.Column="0" Content="Адреса клиента" Margin="5"/>
-        <Label Grid.Row ="3" Grid.Column="0" Content="Тип клиента*" Margin="5"/>
-        <Label Grid.Row ="4" Grid.Column="0" Content="* - обязательно к заполнению" Margin="5"/>
+        <Border.Background>
+            <LinearGradientBrush StartPoint="0.4,0" EndPoint="0.5,1">
+                <GradientStop Color="#003b46" Offset="0"></GradientStop>
+                <GradientStop Color="#66a5ad" Offset="1"></GradientStop>
+            </LinearGradientBrush>
+        </Border.Background>
 
-        <TextBox Grid.Row="0" Grid.Column="1" x:Name="workerID" Margin="5" ></TextBox>
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="Phones" Margin="5"/>
-        <TextBox Grid.Row="2" Grid.Column="1" x:Name="Adresses" Margin="5"/>
-        <Button Grid.Row="4" Grid.Column="1" Content="OK" Margin="5" Click="Button_Click"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 
-    </Grid>
+            <TextBox Style="{DynamicResource TextBoxStyleAddWorker}" x:Name="workerID" Grid.Row="0" TextChanged="txtNote_TextChanged" Width="400" Height="25"/>
+
+            <TextBlock Style="{DynamicResource TextBlockStyleAddWorker}" Text="ID работника" x:Name="leblNote" MouseDown="lblNote_MouseDown"/>
+
+            <Button Style="{StaticResource ButtonStyleEdit}" Grid.Row="4" Grid.Column="1" Content="OK" Margin="5" Click="Button_Click" Width="100" Height="40"/>
+
+        </Grid>
+    </Border>
+
 </Window>
