--- a/DesignTaburetka/EditNote.xaml
+++ b/DesignTaburetka/EditNote.xaml
@@ -6,7 +6,7 @@
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:local="clr-namespace:DesignTaburetka"
         mc:Ignorable="d"
-        Title="EditNote" Height="265" Width="300">
+        Title="EditNote" Height="320" Width="320">
 
     <Border>
 
@@ -25,28 +25,28 @@
 
             <StackPanel Grid.ColumnSpan="2">
 
-                <TextBlock Text="Описание:" FontWeight="Bold" Foreground="White"/>
-                <TextBox Grid.ColumnSpan="2" Name="Description" Text="{Binding Path=Description, Mode=TwoWay}" Background="#66A5AD" Foreground="white"/>
+                <TextBlock Text="Описание:" FontWeight="Bold" Foreground="White" Margin="0,5,0,5"/>
+                <TextBox Style="{StaticResource TextBoxStyleAddWorker}" Grid.ColumnSpan="2" Name="Description" Text="{Binding Path=Description, Mode=TwoWay}" Background="#66A5AD" Foreground="white" Width="300" Height="26"/>
 
-                <TextBlock Text="Изображение:" Grid.Column="0" Width="100" HorizontalAlignment="Left" FontWeight="Bold" Foreground="White"/>
+                <TextBlock Text="Изображение:" Grid.Column="0" Width="100" HorizontalAlignment="Left" FontWeight="Bold" Foreground="White" Margin="0,5,0,0"/>
                 <Button Style="{StaticResource button}" Width="25" Height="35" VerticalAlignment="Top" Name="ImageUpload" HorizontalAlignment="Right" Click="ImageUpload_Click" Margin="12,0,12,8">
                     <fa:ImageAwesome Icon="image" Height="25" Width="18"/>
                 </Button>
-                <TextBox Name="ImageSource" Text="{Binding Path=ImageSource, Mode=TwoWay}" Background="#66A5AD" Foreground="white"/>
+                <TextBox Style="{StaticResource TextBoxStyleAddWorker}" Name="ImageSource" Text="{Binding Path=ImageSource, Mode=TwoWay}" Background="#66A5AD" Foreground="white" Width="300" Height="26"/>
 
-                <TextBlock Text="Файл:" FontWeight="Bold" Grid.ColumnSpan="1" Grid.Column="0" Foreground="White"/>
-                <Button Style="{StaticResource button}" Name="FileUpload" Grid.ColumnSpan="1" Grid.Column="1" Width="25" Height="35" HorizontalAlignment="Right"  Click="FileUpload_Click" Margin="12,0,12,8">
+                <TextBlock Text="Файл:" FontWeight="Bold" Grid.ColumnSpan="1" Grid.Column="0" Foreground="White" Margin="0,5,0,0"/>
+                <Button Style="{StaticResource button}" Name="FileUpload" Grid.ColumnSpan="1" Grid.Column="1" Width="25" Height="35" HorizontalAlignment="Right"  Click="FileUpload_Click" Margin="12,0,12,8" >
                     <fa:ImageAwesome x:Name="fileUpload" Icon="PaperClip" Height="18" Width="19"/>
                 </Button>
-                <TextBox Name="FileSource" Text="{Binding Path=FileSource, Mode=TwoWay}" Background="#66A5AD" Foreground="White"/>
+                <TextBox Style="{StaticResource TextBoxStyleAddWorker}" Name="FileSource" Text="{Binding Path=FileSource, Mode=TwoWay}" Background="#66A5AD" Foreground="White" Width="300" Height="26"/>
                 <Grid HorizontalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="1*"></ColumnDefinition>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <Button Style="{DynamicResource ButtonStyleEdit}" IsDefault="True" Name="Save" Grid.Column="0" Click="Save_Click" Margin="8,8,0,0">OK</Button>
-                    <Button Style="{DynamicResource ButtonStyleEdit}" IsCancel="True" Name="Cancel" Grid.Column="2" Click="Cancel_Click" Margin="0,8,8,0">Cancel</Button>
+                    <Button Style="{DynamicResource ButtonStyleEdit}" IsDefault="True" Name="Save" Grid.Column="0" Click="Save_Click" Margin="10,10,0,0">OK</Button>
+                    <Button Style="{DynamicResource ButtonStyleEdit}" IsCancel="True" Name="Cancel" Grid.Column="2" Click="Cancel_Click" Margin="0,10,10,0">Cancel</Button>
                 </Grid>
             </StackPanel>
         </Grid>
